# fr-icm

./: .dockerignore  .env  .env.example  .semgrep.yml  AGENTVERSE.md  API-IMPLEMENTATION.md  Cargo.toml  DataNeeded.md  Dockerfile  GAME.md  PITCH.md  Procfile  QUICK_START_INITIALIZE.md  README.md  SHAREABLE_LINKS.md  send-agentiverse.html
.github/workflows/: icm.yml
docs/: api-reference.md  components.md  deployment.md  frontend-guide.md  technical-architecture.md
idls/: icm_program.json
migrations/: 003_trading_agent_tables.sql  004_fix_trading_pools_timestamps.sql
project-idea/: EFFICIENT-RUST-SCALING.md  POSTGRES.md  RAW-ARCH-DIAGRAM.md  README.md  working-typescrypt-swap-engine-jupiterDex.ts
src/: config.rs  main.rs  server.rs  state_structs.rs
src/agent/: agent_plan.rs  ai_client.rs  data_fetcher.rs  executor.rs  mod.rs  observer.rs  planner.rs  strategy.rs  trading_agent.rs  types.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  models.rs
src/database/: connection.rs  migrations.rs  mod.rs  models.rs
src/idl/: icm-program.json
src/onchain_instance/: instance.rs  mod.rs
src/routes/: agent.rs  auth.rs  faucet.rs  health.rs  icm.rs  mod.rs  wallet.rs
src/services/: agent_executor.rs  mod.rs  portfolio_tracker.rs  swap_engine.rs
src/swap/: executeswap.rs  helpers.rs  retryable_rpc.rs
