[package]
name = "icm-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-async = "0.2.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0"
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14.1"
postgres-native-tls = "0.5.1"
native-tls = "0.2.14"
refinery = { version = "0.8", features = ["tokio-postgres"] }
url = "2.4"
bigdecimal = { version = "0.4.6", features = ["serde"] }
rust_decimal = { version = "1.34", features = ["tokio-pg", "serde"] }
async-trait = "0.1"
thiserror = "2.0.12"
reqwest = { version = "0.12", features = ["json"] }
bs58 = "0.5"
solana-sdk = "2.0"
solana-client = "2.0"
spl-token = "6.0"
spl-token-2022 = "9.0.0"
spl-associated-token-account = { version = "4.0", default-features = false, features = ["no-entrypoint"] }
dotenv = "0.15"
base64 = "0.22"
bincode = "1.3"
anchor-client = { version = "0.31.1 ", features = ["async"] }
anchor-lang = { version = "0.31.1", features = ["idl-build"] }
openai-api-rs = "5.0"
futures = "0.3"
tokio-tungstenite = "0.21"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
ring = "0.17"
rand = "0.8"
once_cell = "1.19"
tower-http = { version = "0.6.6", features = ["cors"] }
argon2 = { version = "0.5.3", features = ["std"] }
rand_core = { version = "0.9.3", features = ["os_rng", "serde", "std"] }
time = "0.3.41"
axum-extra = { version = "0.10.1", features = ["cookie"] }

